# student-registration-system

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: app.c  app.h
src/infra/gtk/: gtk.c  gtk.h
src/infra/gtk/utils/: alerts.c  alerts.h
src/infra/storage/: storage.c  storage.h
src/modules/student/: studentsModule.h
src/modules/student/entities/: student.h
src/modules/student/presentation/createStudentPresentation/: createStudentPresentation.c  createStudentPresentation.h
src/modules/student/presentation/findStudentPresentation/: findStudentPresentation.c  findStudentPresentation.h
src/modules/student/presentation/listStudentsPresentation/: listStudentsPresentation.c  listStudentsPresentation.h
src/modules/student/presentation/removeStudentPresentation/: removeStudentPresentation.c  removeStudentPresentation.h
src/modules/student/presentation/updateStudentPresentation/: updateStudentPresentation.c  updateStudentPresentation.h
src/modules/student/presentation/viewStudentPresentation/: viewStudentPresentation.c  viewStudentPresentation.h
src/modules/student/useCases/checkIfStudentExistsByCpf/: checkIfStudentExistsByCpf.c  checkIfStudentExistsByCpf.h
src/modules/student/useCases/createStudent/: createStudent.c  createStudent.h
src/modules/student/useCases/findStudent/: findStudent.c  findStudent.h
src/modules/student/useCases/listStudents/: listStudents.c  listStudents.h
src/modules/student/useCases/removeStudent/: removeStudent.c  removeStudent.h
src/modules/student/useCases/updateStudent/: updateStudent.c  updateStudent.h
src/modules/student/useCases/updateStudentList/: updateStudentList.c  updateStudentList.h
src/shared/: studentsFilePath.c  studentsFilePath.h  updateStudentId.c  updateStudentId.h
